# codex-inter-agent-chat

./: .gitignore  README.en.md  README.md  pyproject.toml
skills/inter-agent-chat-codex/: SKILL.md
skills/inter-agent-chat-codex/agents/: openai.yaml
skills/inter-agent-chat-codex/scripts/: capability-report.py  list-codex-agents.py  register-codex-tty.py  send-codex-message.py  unregister-codex-agent.py
src/codex_inter_agent_chat/: __init__.py  cli.py  registry.py  team_cli.py  transport.py
tests/: test_cli.py  test_registry.py  test_skill_package.py  test_transport.py
tools/: codex-team.sh  demo-two-agents.sh  install-skill.sh  uninstall-skill.sh
